--- a/app/stops/template.hbs
+++ b/app/stops/template.hbs
@@ -36,7 +36,7 @@
             <p class="caption">Clique na paragem para mais informações</p>
           </div>
         {{else}}
-          <p class="caption">Paire numa paragem para mais informações</p>
+          <p class="caption">Paire numa paragem ver o nome</p>
           {{#if mapMoved}}
             <button class="btn btn-mapzen" {{action "updatebbox"}}>Refazer pesquisa na área do mapa</button>
           {{/if}}
