--- a/app/components/sidebar-title-transitland/template.hbs
+++ b/app/components/sidebar-title-transitland/template.hbs
@@ -1,2 +1,2 @@
-<div class="no-padding col-md-10"><h4>Visualize public transit <nobr>networks&nbsp;<i class="fa fa-question-circle"></i></nobr></h4>
-{{#popover-on-element class="tooltip-on-sidebar" event="click"}}Find operators of public transit. Follow their bus, train, subway and gondola route lines. Map stop locations. Powered by the <a href="https://tppgeo.cf/documentation">TPP Datastore API.</a>{{/popover-on-element}}</div>
+<div class="no-padding col-md-10"><h4>Visualizar transportes públicos<nobr>networks&nbsp;<i class="fa fa-question-circle"></i></nobr></h4>
+{{#popover-on-element class="tooltip-on-sidebar" event="click"}}Encontre operadores de transportes públicos. Siga as suas totas de autocarros, comboios, metros, e barcos. Mapeie localizações de paragens. Alimentado pela <a href="https://tppgeo.cf/documentation">API do Banco de Dados TPP.</a>{{/popover-on-element}}</div>
