--- a/app/components/text-box/template.hbs
+++ b/app/components/text-box/template.hbs
@@ -1,7 +1,7 @@
 <div class="site-intro">
   <p>{{text}}</p>
-  <p>Mobility Explorer makes use of <a href="https://tpp.pt">TPP</a> public-transit data, <a href="https://search.tpp.pt/">TPP geocode</a> search, and <a href="https://www.nextzen.org">Nextzen</a> map tiles.</p>
-  <p>Click <a href="https://github.com/tpportugal/tpp_explorador/blob/master/docs/overview.md" target="_blank">here</a> to learn more&hellip;</p>
+  <p>O Explorador de Mobilidade TPP utiliza dados de transportes públicos da API do Banco de Dados <a href="https://tpp.pt">TPP</a> , pesquisa de<a href="https://search.tpp.pt/">geolocalização TPP</a>, e mosaicos de mapa <a href="https://www.nextzen.org">Nextzen</a>.</p>
+  <p>Clique <a href="https://github.com/tpportugal/tpp_explorador/blob/master/docs/overview.md" target="_blank">aqui</a> para saber mais&hellip;</p>
   <div class="close-textbox" {{action "close"}}>
     <i class="fa fa-times-circle" aria-hidden="true"></i> close
   </div>
