--- a/app/components/url-builder/template.hbs
+++ b/app/components/url-builder/template.hbs
@@ -1,5 +1,5 @@
-<div class="url-builder"><a target="_blank" href="{{queryUrl}}">See the {{server}} API request for these results  <i class="fa fa-external-link" aria-hidden="true"></i></a><br>
+<div class="url-builder"><a target="_blank" href="{{queryUrl}}">Veja o pedido à API do {{server}} para estes resultados  <i class="fa fa-external-link" aria-hidden="true"></i></a><br>
 {{#if (not-eq entity "isochrones")}}
-<a target="_blank" href="{{geoJsonUrl}}">See these results in geoJSON format <i class="fa fa-external-link" aria-hidden="true"></i></a>
+<a target="_blank" href="{{geoJsonUrl}}">Veja estes resultados em formato geoJSON <i class="fa fa-external-link" aria-hidden="true"></i></a>
 {{/if}}
 </div>
