--- a/app/isochrones/template.hbs
+++ b/app/isochrones/template.hbs
@@ -9,26 +9,26 @@
   {{/if}}
   {{sidebar-title-tpp}}
   <div class="btn-group-vertical" role="group" >
-    {{#link-to 'routes' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null isochrone_mode=null pin=pin)}}<button class="btn btn-transparent-alt">Show Routes</button>{{/link-to}}
-    {{#link-to 'stops' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null pin=pin isochrone_mode=null)}}<button class="btn btn-transparent-alt">Show Stops</button>{{/link-to}}
-    {{#link-to 'operators' (query-params bbox=bbox pin=pin onestop_id=null isochrone_mode=null)}}<button class="btn btn-transparent-alt">Show Operators</button>{{/link-to}}
+    {{#link-to 'routes' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null isochrone_mode=null pin=pin)}}<button class="btn btn-transparent-alt">Mostrar Rotas</button>{{/link-to}}
+    {{#link-to 'stops' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null pin=pin isochrone_mode=null)}}<button class="btn btn-transparent-alt">Mostrar Paragens</button>{{/link-to}}
+    {{#link-to 'operators' (query-params bbox=bbox pin=pin onestop_id=null isochrone_mode=null)}}<button class="btn btn-transparent-alt">Mostrar Operadores</button>{{/link-to}}
   </div>
   <hr class="sidebar-hr">
     {{sidebar-title-mobility}}
   <div class="btn-group-vertical" role="group" >
-  {{#link-to 'isochrones' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null isochrone_mode=isochrone_mode pin=pin departure_time=null)}}<button class="btn btn-mapzen-alt">Generate Isochrones</button>{{/link-to}}
+  {{#link-to 'isochrones' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null isochrone_mode=isochrone_mode pin=pin departure_time=null)}}<button class="btn btn-mapzen-alt">Gerar Isócronas</button>{{/link-to}}
   <div class="expanded-selection">
     <form>
       <div class="isochrone-detail">
         {{#if pin}}
-          <div class="form-group-header">View distance you can travel from this {{#if pin}}pin{{/if}}{{#if stopmode}}stop{{/if}} via:</div>
+          <div class="form-group-header">Veja a distância que pode viajar a partir {{#if pin}}deste ponto{{/if}}{{#if stopmode}}desta paragem{{/if}} indo:</div>
             <div class="form-group">
               {{#if (eq isochrone_mode "pedestrian")}}
                 <input type="radio" id="radio-1" name="options" checked=showPedestrian {{action "setIsochroneMode" "pedestrian"}}>
               {{else}}
                 <input type="radio" id="radio-1" name="options" {{action "setIsochroneMode" "pedestrian"}}>
               {{/if}}
-              <label for="radio-1">walking</label><br>
+              <label for="radio-1">a pé</label><br>
               {{#if (eq isochrone_mode "pedestrian")}}
               {{isochrone-legend isochrone_mode=isochrone_mode showIsochrone=showIsochrone action="setIsochrone"}}
               {{/if}}
@@ -38,7 +38,7 @@
               {{else}}
                 <input type="radio" id="radio-2" name="options" {{action "setIsochroneMode" "bicycle"}}>
               {{/if}}
-              <label for="radio-2">biking</label><br>
+              <label for="radio-2">de bicicleta</label><br>
               {{#if (eq isochrone_mode "bicycle")}}
                 {{isochrone-legend isochrone_mode=isochrone_mode showIsochrone=showIsochrone action="setIsochrone"}}
               {{/if}}
@@ -48,7 +48,7 @@
               {{else}}
                 <input type="radio" id="radio-3" name="options" {{action "setIsochroneMode" "auto"}}>
               {{/if}}
-              <label for="radio-3">driving</label><br>
+              <label for="radio-3">de carro</label><br>
               {{#if (eq isochrone_mode "auto")}}
                 {{isochrone-legend isochrone_mode=isochrone_mode showIsochrone=showIsochrone action="setIsochrone"}}
               {{/if}}
@@ -58,21 +58,21 @@
               {{else}}
                 <input type="radio" id="radio-4" name="options" {{action "setIsochroneMode" "multimodal"}}>
               {{/if}}
-              <label for="radio-4">transit</label>
+              <label for="radio-4">de transportes públicos</label>
               {{#if (eq isochrone_mode "multimodal")}}
                 {{isochrone-legend isochrone_mode=isochrone_mode showIsochroneOne=showIsochroneOne showIsochroneTwo=showIsochroneTwo showIsochroneThree=showIsochroneThree showIsochroneFour=showIsochroneFour action="setIsochrone"}}
               {{/if}}
             </div>
             {{#if (eq isochrone_mode "multimodal")}}
               {{#if departure_time}}
-                <p class="caption">departure at:</p>
+                <p class="caption">partida a:</p>
                 <div class="datetime-picker">
                   {{bs-datetimepicker date=departure_time isTime=true sideBySide=false showTodayButton=true change=(action 'change')}}
                 </div>
                 <div class="reset-datetime" {{action "resetDepartureTime"}}>
-                  reset to current date and time <i class="fa fa-undo" aria-hidden="true"></i></div>
+                  repôr para data e hora atuais <i class="fa fa-undo" aria-hidden="true"></i></div>
               {{else}}
-                <p class="caption">departure at:</p>
+                <p class="caption">partida a:</p>
                 <div class="datetime-picker">
                   {{bs-datetimepicker date=moment isTime=true sideBySide=false showTodayButton=true change=(action 'change')}}
                 </div>
@@ -80,25 +80,25 @@
             {{/if}}
           {{else}}
             <div>
-              <p>See the distance you can travel from a particular point at various time intervals.</p>
-              <p>Read <a href="https://github.com/tpportugal/tpp_explorador/blob/master/docs/isochrones.md">more about isochrones</a>, or get started by clicking on the map or searching for a location.</p>
+              <p>Visualize a distância que pode viajar a partir de um determinado local em vários intervalos de tempo.</p>
+              <p>Leia <a href="https://github.com/tpportugal/tpp_explorador/blob/master/docs/isochrones.md">mais sobre isócronas</a>, ou comece clicando num ponto no mapa ou pesquisando um local.</p>
             </div>
           {{/if}}
         </div>
         {{#if (eq isochrone_mode "multimodal")}}
           <div>
             {{#if markIncludedExcluded}}
-              <button type="button" data-toggle="collapse" data-target="#operator-list">Include or exclude operators &#8597;</button><br>
+              <button type="button" data-toggle="collapse" data-target="#operator-list">Incluir or excluir operadores &#8597;</button><br>
               <div id="operator-list" class="collapse">
-                <div class="caption">Include one or more operators to see isochrones that use only the selected operator(s).<br>
+                <div class="caption">Inclua um ou mais operadores para ver isócronas que apenas utilizem o(s) operador(es) selecionado(s).<br>
                   <br>
-                  Exclude one or more operators to see isochones that do not include the selected operator(s).<br><br>
+                  Exclua um ou mais operadores para ver isócronas que não utilizem o(s) operador(es) selecionado(s).<br><br>
                 </div>
                 <table>
                   <tr>
                     <th style="min-width:5ch;padding-right:5px">Incl.</th>
                     <th style="min-width:5ch;padding-right:5px">Excl.</th>
-                    <th>Operator</th>
+                    <th>Operador</th>
                   </tr>
                   {{#each model.operators as |operator|}}
                     <tr>
@@ -126,17 +126,17 @@
                   {{/each}}
                 </table>
               </div>
-              <button type="button" data-toggle="collapse" data-target="#route-list">Include or exclude routes &#8597;</button><br>
+              <button type="button" data-toggle="collapse" data-target="#route-list">Incluir or excluir rotas &#8597;</button><br>
               <div id="route-list" class="collapse">
-                <div class="caption">Include one or more routes to see isochrones that use only the selected route(s).<br>
+                <div class="caption">Inclua uma ou mais rotas para ver isócronas que apenas utilizem a(s) rota(s) selecionada(s).<br>
                   <br>
-                  Exclude one or more routes to see isochrones that do not use the selected route(s).<br><br>
+                  Exclua uma ou mais rotas para ver isócronas que não utilizem a(s) rota(s) selecionada(s).<br><br>
                 </div>
                 <table>
                   <tr>
                     <th style="min-width:5ch;padding-right:5px">Incl.</th>
                     <th style="min-width:5ch;padding-right:5px">Excl.</th>
-                    <th>Route</th>
+                    <th>Rota</th>
                   </tr>
                   {{#if (gt exclude_operators.length 0)}}
                     {{#each model.routes as |route|}}
