--- a/app/operators/template.hbs
+++ b/app/operators/template.hbs
@@ -9,20 +9,20 @@
   {{/if}}
   {{sidebar-title-tpp}}
   <div class="btn-group-vertical" role="group" >
-  {{#link-to 'routes' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null)}}<button class="btn btn-transparent-alt">Show Routes</button>{{/link-to}}
-  {{#link-to 'stops' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null isochrone_mode=null)}}<button class="btn btn-transparent-alt">Show Stops</button>{{/link-to}}
-  {{#link-to 'operators' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null)}}<button class="btn btn-mapzen-alt">Show Operators</button>{{/link-to}}
+  {{#link-to 'routes' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null)}}<button class="btn btn-transparent-alt">Mostrar Rotas</button>{{/link-to}}
+  {{#link-to 'stops' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null isochrone_mode=null)}}<button class="btn btn-transparent-alt">Mostrar Paragens</button>{{/link-to}}
+  {{#link-to 'operators' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null)}}<button class="btn btn-mapzen-alt">Mostrar Operadores</button>{{/link-to}}
     <div class="expanded-selection">
       {{#if onestop_id}}
         {{#operator-detail bbox=bbox onestop_id=onestop_id operator=selectedOperator operators=model}}{{/operator-detail}}
-        <p>{{#link-to 'routes' (query-params bbox=leafletBbox onestop_id=null serves=null operated_by=onestop_id served_by=null style_routes_by=null) }}View routes operated by {{model.firstObject.name}}{{/link-to}}</p><br>
+        <p>{{#link-to 'routes' (query-params bbox=leafletBbox onestop_id=null serves=null operated_by=onestop_id served_by=null style_routes_by=null) }}Ver rotas operadas por {{model.firstObject.name}}{{/link-to}}</p><br>
         <p>{{#link-to 'stops' (query-params bbox=leafletBbox served_by=onestop_id onestop_id=null serves=null operated_by=null isochrone_mode=null) }}View stops served by {{model.firstObject.name}}{{/link-to}}</p>
       {{else}}
         {{#power-select
           options=operators
           selected=operator
           placeholder=placeholderMessage
-          searchPlaceholder="Type to filter..."
+          searchPlaceholder="Escreva para filtrar..."
           onchange=(action "setOperator")
           as |operator|
         }}
@@ -37,12 +37,12 @@
       {{else if hoverOperator}}
         <div class="hover-detail">
           {{hoverOperator.name}}<br>
-          <p class="caption">Click the operator area for more information</p>
+          <p class="caption">Clique na área do operador para mais informações</p>
         </div>
       {{else}}
         <p class="caption">{{operatorSelectContent}}</p>
         {{#if mapMoved}}
-          <button class="btn btn-mapzen" {{action "updatebbox"}}>Redo search in map area</button>
+          <button class="btn btn-mapzen" {{action "updatebbox"}}>Refazer pesquisa na área do mapa</button>
         {{/if}}
       {{/if}}
     </div>
@@ -51,7 +51,7 @@
       <hr class="sidebar-hr">
       {{sidebar-title-mobility}}
       <div class="btn-group-vertical" role="group" >
-      {{#link-to 'isochrones' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null isochrone_mode=null pin=pin)}}<button class="btn btn-transparent-alt">Generate Isochrones</button>{{/link-to}}
+      {{#link-to 'isochrones' (query-params bbox=leafletBbox onestop_id=null served_by=null operated_by=null serves=null style_routes_by=null isochrone_mode=null pin=pin)}}<button class="btn btn-transparent-alt">Gerar Isócronas</button>{{/link-to}}
       <!--
       {{#link-to 'map-matching' (query-params bbox=leafletBbox onestop_id=null served_by=null isochrone_mode=null operated_by=null pin=pin serves=null vehicle_type=null isochrone_mode=null trace=null)}}<button class="btn btn-transparent-alt">Try Map Matching</button>{{/link-to}}
       -->
