--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -445,18 +445,19 @@ input, button, select, textarea {
 }
 
 .loading-spinner-03 {
+  content: 'Aguarde';
   -webkit-animation: spin 2s linear infinite;
   animation: spin 1s linear infinite;
   border: 10px solid $mapzen-blue;
   border-radius: 50%;
   border-top: 10px solid $white;
-  height: 70px;
+  height: 90px;
   left: 45%;
   margin: auto;
   opacity: 1;
   position: absolute;
   top: 50%;
-  width: 70px;
+  width: 90px;
   z-index: 5;
 }
 
