Fixing up some localization terms

--- a/app/routes/template.hbs
+++ b/app/routes/template.hbs
@@ -31,7 +31,7 @@
           </span>
           <div class="headroom footroom">
             <row class="subheading-row">
-              <div class="form-group-header sidebar-header col-md-10">{{#link-to 'route-stop-patterns' (query-params bbox=bbox traversed_by=onestop_id onestop_id=null operated_by=null serves=null served_by=onestop_id vehicle_type=null pin=pin isochrone_mode=null)}}Mostrar padrões rota paragem{{/link-to}}&nbsp;<div class="fa fa-question-circle"></div>{{#popover-on-element class="tooltip-on-sidebar" event="click"}}Visualize as combinações únicas de linhas para viagens e paragens ao longo desta linha.{{/popover-on-element}}</div>
+              <div class="form-group-header sidebar-header col-md-10">{{#link-to 'route-stop-patterns' (query-params bbox=bbox traversed_by=onestop_id onestop_id=null operated_by=null serves=null served_by=onestop_id vehicle_type=null pin=pin isochrone_mode=null)}}Mostrar Padrões de Paragens de Rota{{/link-to}}&nbsp;<div class="fa fa-question-circle"></div>{{#popover-on-element class="tooltip-on-sidebar" event="click"}}Visualize as combinações únicas de linhas para viagens e paragens desta rota.{{/popover-on-element}}</div>
             </row>
           </div>
         </div>
