--- a/app/components/sidebar-title-mobility/template.hbs
+++ b/app/components/sidebar-title-mobility/template.hbs
@@ -1,6 +1,6 @@
 <div class="no-padding col-md-10">
   <h4>Analisar accessos&nbsp;<p class="fa fa-question-circle"></p></h4>
     {{#popover-on-element class="tooltip-on-sidebar" event="click"}}
-      Veja como transportes públicos, carros, bicicletas, e andar a pé moldam a nossa capacidade de movimentação. Alimentado pelos <a href="https://github.com/tpportugal/tpp_valhalla/">serviços do motor de rotas TPP.</a>
+      Veja como transportes públicos, carros, bicicletas, e andar a pé moldam a nossa capacidade de movimentação. Alimentado pelo <a href="https://docs.tpp.pt/motor-de-rotas/">motor de rotas TPP.</a>
     {{/popover-on-element}}
 </div>
