--- a/app/isochrones/template.hbs
+++ b/app/isochrones/template.hbs
@@ -81,7 +81,7 @@
           {{else}}
             <div>
               <p>Visualize a distância que pode viajar a partir de um determinado local em vários intervalos de tempo.</p>
-              <p>Leia <a href="https://github.com/tpportugal/tpp_explorador/blob/master/docs/isochrones.md">mais sobre isócronas</a>, ou comece clicando num ponto no mapa ou pesquisando um local.</p>
+              <p>Leia <a href="https://docs.tpp.pt/explorador/isochrones.md">mais sobre isócronas</a>, ou comece clicando num ponto no mapa ou pesquisando um local.</p>
             </div>
           {{/if}}
         </div>
