--- a/app/operators/template.hbs
+++ b/app/operators/template.hbs
@@ -16,7 +16,7 @@
       {{#if onestop_id}}
         {{#operator-detail bbox=bbox onestop_id=onestop_id operator=selectedOperator operators=model}}{{/operator-detail}}
         <p>{{#link-to 'routes' (query-params bbox=leafletBbox onestop_id=null serves=null operated_by=onestop_id served_by=null style_routes_by=null) }}Ver rotas operadas por {{model.firstObject.name}}{{/link-to}}</p><br>
-        <p>{{#link-to 'stops' (query-params bbox=leafletBbox served_by=onestop_id onestop_id=null serves=null operated_by=null isochrone_mode=null) }}View stops served by {{model.firstObject.name}}{{/link-to}}</p>
+        <p>{{#link-to 'stops' (query-params bbox=leafletBbox served_by=onestop_id onestop_id=null serves=null operated_by=null isochrone_mode=null) }}Ver paragens servidas por {{model.firstObject.name}}{{/link-to}}</p>
       {{else}}
         {{#power-select
           options=operators
